<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/EventNameTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/event_name"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/ValueTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
    android:id="@+id/ValueTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/minus"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/EventNameTextView"
    android:layout_marginTop="10dp"
    android:textSize="22sp"/>

    <TextView
        android:id="@+id/unitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ValueTextView"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:paddingBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>