<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline28"
        app:layout_constraintTop_toTopOf="@id/guideline29" />

    <TextView
        android:id="@+id/timeStampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="5dp"
        android:text="@string/timestamp"
        app:layout_constraintLeft_toLeftOf="@id/guideline28"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0729927" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01504788" />

    <TextView
        android:id="@+id/dataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/speed_45_km_h"
        android:lineSpacingExtra="5sp"
        app:layout_constraintLeft_toLeftOf="@id/guideline28"
        app:layout_constraintRight_toRightOf="@id/guideline31"
        app:layout_constraintTop_toBottomOf="@id/timeStampTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>