<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/commandNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/command_name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentLeft="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:scrollHorizontally="true"
            android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/selectCommandSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />
    <TextView
        android:id="@+id/msTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/ms"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
       android:layout_toLeftOf="@id/selectCommandSwitch"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/selectCommandSwitch"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:layout_toLeftOf="@id/msTextView"
        android:layout_toStartOf="@id/msTextView"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="15sp"
        android:gravity="end"
        android:hint="@string/_1"
        android:autofillHints="-1"
        tools:ignore="RelativeOverlap"
        android:visibility="invisible"/>


</RelativeLayout>